; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs.c_loopfun.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/netbsd-tests/fs/puffs/h_dtfs/extr_dtfs.c_loopfun.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.puffs_usermount = type { i32 }
%struct.dtfs_mount = type { i32, i64 }
%struct.dtfs_poll = type { i32 }

@dp_entries = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.puffs_usermount*)* @loopfun to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @loopfun(%struct.puffs_usermount* %0) #0 {
  %2 = alloca %struct.puffs_usermount*, align 8
  %3 = alloca %struct.dtfs_mount*, align 8
  %4 = alloca %struct.dtfs_poll*, align 8
  store %struct.puffs_usermount* %0, %struct.puffs_usermount** %2, align 8
  %5 = load %struct.puffs_usermount*, %struct.puffs_usermount** %2, align 8
  %6 = call %struct.dtfs_mount* @puffs_getspecific(%struct.puffs_usermount* %5)
  store %struct.dtfs_mount* %6, %struct.dtfs_mount** %3, align 8
  br label %7

7:                                                ; preds = %23, %1
  %8 = load %struct.dtfs_mount*, %struct.dtfs_mount** %3, align 8
  %9 = getelementptr inbounds %struct.dtfs_mount, %struct.dtfs_mount* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %31

12:                                               ; preds = %7
  %13 = load %struct.dtfs_mount*, %struct.dtfs_mount** %3, align 8
  %14 = getelementptr inbounds %struct.dtfs_mount, %struct.dtfs_mount* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %15, -1
  store i64 %16, i64* %14, align 8
  %17 = load %struct.dtfs_mount*, %struct.dtfs_mount** %3, align 8
  %18 = getelementptr inbounds %struct.dtfs_mount, %struct.dtfs_mount* %17, i32 0, i32 0
  %19 = call %struct.dtfs_poll* @LIST_FIRST(i32* %18)
  store %struct.dtfs_poll* %19, %struct.dtfs_poll** %4, align 8
  %20 = load %struct.dtfs_poll*, %struct.dtfs_poll** %4, align 8
  %21 = icmp eq %struct.dtfs_poll* %20, null
  br i1 %21, label %22, label %23

22:                                               ; preds = %12
  br label %31

23:                                               ; preds = %12
  %24 = load %struct.dtfs_poll*, %struct.dtfs_poll** %4, align 8
  %25 = load i32, i32* @dp_entries, align 4
  %26 = call i32 @LIST_REMOVE(%struct.dtfs_poll* %24, i32 %25)
  %27 = load %struct.dtfs_poll*, %struct.dtfs_poll** %4, align 8
  %28 = getelementptr inbounds %struct.dtfs_poll, %struct.dtfs_poll* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @puffs_cc_continue(i32 %29)
  br label %7

31:                                               ; preds = %22, %7
  ret void
}

declare dso_local %struct.dtfs_mount* @puffs_getspecific(%struct.puffs_usermount*) #1

declare dso_local %struct.dtfs_poll* @LIST_FIRST(i32*) #1

declare dso_local i32 @LIST_REMOVE(%struct.dtfs_poll*, i32) #1

declare dso_local i32 @puffs_cc_continue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
